TEST_PROGRAMS/INVALID/luke_emery-fertitta/parse_int.min
# parsing error example - invalid int format

var x: int;
x = 010;
